# yjengine

./: .gitignore  README.md
doc/流程图/: entity创建流程.drawio  entity断线重连流程.drawio  entity灾备流程.drawio  entity迁移流程.drawio
server/: CMakeLists.txt  Makefile  configure  server.sln
server/client/: client.cpp  client.ini  client.vcxproj  client.vcxproj.filters  client_app.cpp
server/client/framework/: client_instance.cpp  client_instance.h  client_rpc.cpp
server/client/gameplay/components/: aoi_component_client.cpp  aoi_component_client.h  avatar_prop_test_component_client.cpp  avatar_prop_test_component_client.h  itembag_component_client.cpp  itembag_component_client.h
server/client/gameplay/entities/: account.cpp  account.h  avatar.cpp  avatar.h
server/common/: common.vcxproj  common.vcxproj.filters
server/common/prop_def/: account_prop_def.h  alias.h  avatar_prop_def.h  dungeon_manager_prop_def.h
server/common/prop_def/components/: avatar_prop_def.h  itembag_prop_def.h
server/common/utils/: utils.cpp  utils.h
server/enc_temp_folder/9c8ee6bfeba6b43ae70e9345154136c/: entity.cpp
server/engine/: boost_asio.cpp  boost_asio.h  byte_swap.h  decode.cpp  decode.h  encode.cpp  encode.h  engine.cpp  engine.h  engine.vcxproj  engine.vcxproj.filters  entity.cpp  entity.h  entity_component_manager.cpp  entity_component_manager.h  entity_event_manager.h  entity_property_manager.cpp  entity_property_manager.h  entity_property_tree.cpp  entity_property_tree.h  entity_rpc_manager.cpp  entity_rpc_manager.h  event.cpp  event.h  gvalue.cpp  gvalue.h  ini.cpp  ini.h  log.cpp  log.h  lua_state_manager.cpp  lua_state_manager.h  mailbox.cpp  mailbox.h  main.cpp  remote_manager.cpp  remote_manager.h  rpc_manager.cpp  rpc_manager.h  timer.cpp  (+5 more)
server/engine/engine/: boost_asio.cpp  boost_asio.h  decode.cpp  decode.h  encode.cpp  encode.h  gvalue.cpp  gvalue.h  log.h  rpc_manager.cpp  rpc_manager.h
server/engine/yjlua/: class_bind.cpp  class_bind.h  entity_bind.cpp  entity_bind.h  lua_method.cpp  lua_method.h  obj_bind.cpp  obj_bind.h  yj_method.cpp  yj_method.h  yjlua.cpp  yjlua.h
server/engine/yjlua/lua/natvis/: lua.natvis
server/engine/yjlua/luajit/src/: lj_bcdef.h  lj_libdef.h
server/game/: game.ini  game.vcxproj  game.vcxproj.filters  game_app.cpp
server/game/framework/: distributed_notify.cpp  distributed_notify.h  entity.cpp  entity.h  entity_rpc_manager.cpp  entity_rpc_manager.h  game_instance.cpp  game_instance.h  game_rpc.cpp  mailbox.h  migrate_rpc.cpp  stub_base.cpp  stub_base.h
server/game/gameplay/: game_utils.h
server/game/gameplay/components/: aoi_component.cpp  aoi_component.h  avatar_prop_test_component.cpp  avatar_prop_test_component.h  create_avatar_component.cpp  create_avatar_component.h  create_avatar_prop_def.h  dungeon_component.cpp  dungeon_component.h  itembag_component.cpp  itembag_component.h
server/game/gameplay/entities/: account.cpp  account.h  account_prop_def.h  account_prop_test.cpp  avatar.cpp  avatar.h  avatar_prop_test.cpp  dungeon.cpp  dungeon.h  monster.cpp  monster.h
server/game/gameplay/entities/stubs/: dungeon_manager.cpp  dungeon_manager.h
server/gate/: gate.ini  gate.vcxproj  gate.vcxproj.filters  gate_app.cpp
server/gate/framework/: gate_instance.cpp  gate_instance.h  gate_rpc.cpp  migrate_rpc.cpp  remote_manager.cpp  remote_manager.h
server/lib/: libprofiler.so.0  libtcmalloc.so.4  libunwind.so.7  lj_vm.lib
server/script/: class.lua  main.lua
server/script/game/entity/: base_avatar.lua
server/server/: game_app.cpp  rpc_test.cpp  server.cpp  server.ini  server.vcxproj  server.vcxproj.filters
server/server/framework/: game_rpc.cpp  game_rpc.h  mailbox.cpp  mailbox.h
server/x64/Debug/: client.ini  game0.ini  game1.ini  game2.ini  gate0.ini  gate1.ini  start_all.bat  start_client.bat  start_game.bat  start_gate.bat
